--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <p><i class="fa fa-envelope mr-2"></i>maptourism.co@gmail.com</p>
+                        <p><i class="fa fa-envelope mr-2"></i>Info@maptourism.in</p>
                         <p class="text-body px-3">|</p>
                         <p><i class="fa fa-phone-alt mr-2" onclick="redirectToWhatsApp()"></i>+91-7907302538</p>
                     </div>
@@ -147,15 +147,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
-                            <div class="mb-3 mb-md-0">
-                                <div class="date" id="date2" data-target-input="nearest">
-                                    <input type="text" class="form-control p-4 datetimepicker-input"
-                                        placeholder="Return Date" data-target="#date2"
-                                        data-toggle="datetimepicker" />
-                                </div>
-                            </div>
-                        </div>
+                        
                         <div class="col-md-3">
                             <div class="mb-3 mb-md-0">
                                 <select class="custom-select px-4" style="height: 47px;">
@@ -168,6 +160,15 @@
                                     <option value="3">6 nights-7 day</option>
                                     <option value="3">7 nights-8 day</option>
                                 </select>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="mb-3 mb-md-0">
+                                <div class="date" id="date2" data-target-input="nearest">
+                                    <input type="text" class="form-control p-4"
+                                        placeholder="Contact No" 
+                                         name="Contact" required />
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -262,7 +263,7 @@
                 <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Kerala</p>
                 <p><i class="fa fa-phone-alt mr-2" onclick="redirectToWhatsApp()"></i>+91-7907302538</p>
-                <p><i class="fa fa-envelope mr-2"></i>maptourism.co@gmail.com</p>
+                <p><i class="fa fa-envelope mr-2"></i>Info@maptourism.in</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
                 <div class="w-100">
                     <div class="input-group">
