--- a/service.html
+++ b/service.html
@@ -239,7 +239,7 @@
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="img/ladakh.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
-                            <h5 class="text-white">Ladhak</h5>
+                            <h5 class="text-white">Ladakh</h5>
                             <!-- <span>100 Cities</span> -->
                         </a>
                     </div>
