--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Map.Tourism</title>
+    <title>Map the world</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Favicon -->
@@ -72,7 +72,7 @@
             <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
                     <h1 class="m-0 text-primary"><img class="logos" src="/img/logo.png" alt=""><span
-                            class="text-dark">map.</span>tourism</h1>
+                            class="text-dark">map</span>the world</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -228,7 +228,7 @@
                     <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
                         <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">About Us</h6>
                         <h1 class="mb-3">We Provide Best Tour Packages In Your Budget</h1>
-                        <p>Welcome to Map.Tourism, your gateway to unforgettable travel experiences. As a premier travel
+                        <p>Welcome to Map the world, your gateway to unforgettable travel experiences. As a premier travel
                             company based in the scenic landscapes of Kerala, we specialize in providing unique and
                             immersive tours tailored for today's conscious travelers.</p>
                         <div class="row mb-4">
@@ -810,9 +810,9 @@
         <div class="row pt-5">
             <div class="col-lg-4 col-md-6 mb-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="text-primary"><span class="text-white">Map.</span>Tourism</h1>
+                    <h1 class="text-primary"><span class="text-white">map</span>the world</h1>
                 </a>
-                <p>Explore the world with Map.Tourism. Discover unforgettable experiences. Contact us for personalized
+                <p>Explore the world with Map the world. Discover unforgettable experiences. Contact us for personalized
                     travel itineraries and expert guidance.</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Follow Us</h6>
                 <div class="d-flex justify-content-start">
@@ -860,7 +860,7 @@
         style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white-50">Copyright &copy; <a href="#">Map.Tourism</a>. All Rights Reserved.</a>
+                <p class="m-0 text-white-50">Copyright &copy; <a href="#">Map the world</a>. All Rights Reserved.</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
